Make build work on jdk9 b135+