@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.jboss</groupId>
         <artifactId>jboss-parent</artifactId>
-        <version>20</version>
+        <version>21</version>
     </parent>
 
     <groupId>io.undertow</groupId>
@@ -499,7 +499,7 @@
                                 <!-- fork is needed so compiler args can be used -->
                                 <fork>true</fork>
                                 <compilerArgs>
-                                    <arg>-J-addmods</arg>
+                                    <arg>-J--add-modules</arg>
                                     <arg>-Jjava.annotations.common</arg>
                                 </compilerArgs>
                             </configuration>
